Ajustando testes